<resources>
    <string name="app_name">Game2048</string>
    <string name="score">SCORE </string>
    <string name="title">2048 </string>
    <string name="title1">Play 2048 Game</string>
    <string name="title2">Join the numbers and get to the 2048 tile!</string>
    <string name="NewGame">New Game</string>
    <string name="rule">HOW TO PLAY</string>
    <string name="bestScore">BEST</string>
    <string name="GameOverString">Game over!</string>
    <string name="TryAgainString">Try again</string>
    <string name="WinString">You win!</string>
    <string name="RestartString">Restart</string>
</resources>
