<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bluekeroro.android.game2048.GameActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="#776e65"
            android:text="@string/title"/>
        <LinearLayout
            android:id="@+id/bestScoreLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_view"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:textColor="#eee4da"
                android:layout_height="wrap_content"
                android:text="@string/bestScore"/>
            <TextView
                android:id="@+id/bestScore"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/bestScoreLinearLayout">

            <LinearLayout
                android:id="@+id/scoreLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_view"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="0dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#eee4da"
                    android:layout_height="wrap_content"
                    android:text="@string/score"/>
                <TextView
                    android:id="@+id/tvScore"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/addTextView"
                android:alpha="0"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>



    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#776e65"
            android:textStyle="bold"
            android:text="@string/title1"/>
        <Button
            android:id="@+id/restartButton"
            android:background="@drawable/corner_view"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/white"
            android:text="@string/NewGame"/>
        <TextView
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/restartButton"
            android:layout_below="@id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title2"/>

    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.bluekeroro.android.game2048.GameView
            android:id="@+id/gameView"
            android:background="@drawable/corner_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="25px"/>
    </FrameLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/rule"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#776e65"
            android:textStyle="bold"
            android:text="@string/rule"/>
        <ImageView
            android:layout_margin="5dp"
            android:layout_toLeftOf="@id/rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_info_details"/>
    </RelativeLayout>
</LinearLayout>
